--- a/index.html
+++ b/index.html
@@ -136,7 +136,10 @@
     <!-- Footer -->
     <footer class="py-5" style="background-color: #25496f">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Francesco Benintende 2018</p>
+        <p class="m-0 text-center text-white">
+          Copyright &copy; UCL How to Change the World - 2018
+          <br/>
+          Group 1 - Material 1 </p>
       </div>
       <!-- /.container -->
     </footer>
