--- a/contacts.html
+++ b/contacts.html
@@ -119,7 +119,7 @@
                 <p class="title">Computer Science</br>MEng</p>
                 
                 <p>francesco.benintende16@ucl.ac.uk</p>
-                <p><button class="button"><a style="text-decoration: none" href="mailto:francesco.benintende16@ucl.ac.uk">Contact</a></button></p>
+                <p><button class="button"><a style="text-decoration: none;color: white" href="mailto:francesco.benintende16@ucl.ac.uk">Contact</a></button></p>
               </div>
             </div>
           </div>
