--- a/contacts.html
+++ b/contacts.html
@@ -51,7 +51,7 @@
   display: inline-block;
   padding: 8px;
   color: white;
-  background-color: #25496f;
+  background-color: #59ACB6;
   text-align: center;
   cursor: pointer;
   width: 100%;
@@ -85,7 +85,7 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #25496f">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #59ACB6">
       <div class="container">
         <a class="navbar-brand" href="index.html">How to Change the World</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -195,7 +195,7 @@
     
 
     <!-- Footer -->
-    <footer class="py-5" style="background-color: #25496f">
+    <footer class="py-5" style="background-color: #59ACB6">
       <div class="container">
         <p class="m-0 text-center text-white">
           Copyright &copy; UCL How to Change the World - 2018
