--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #25496f">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #59ACB6">
       <div class="container">
         <a class="navbar-brand" href="index.html">How to Change the World</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,13 +53,34 @@
     <section class="py-5">
       <div class="container">
         <h1>The Problem</h1>
-        <p class="lead">50% of waste of construction materials is generated during the production phase.</p>
-        <p>This waste costs a lot to dispose and reduces the effeciency of constructions. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem nam repellat enim perspiciatis ducimus, corrupti omnis, unde animi aliquid velit facere. Maiores fugit saepe debitis, pariatur quisquam impedit totam? Expedita?</p>
+        <p class="lead">Construction, demolition and excavation (CD&E) generated over half of total UK waste in 2014.</p>
+        <p>Our team has been tasked with finding ways to reduce the consumption of energy in the lifetime of buildings. The UK government reports that around 90% of construction waste is successfully recycled [1], however the energy consumption for recycling construction waste is high. Instead of focusing on treating waste, our team will focus on minimizing waste and energy consumption, during the construction processes. Around 15% of the volume of materials used is wasted during the construction process. If optimized, less waste would be generated, which would increase the recycling rate, but decrease the energy for logistics and production[2].</p>
+        <div style="text-align: center">
+          <img src="img/icon.png" style="max-width: 80%;"/>
+        </div>
       </div>
     </section>
 
     <!-- Image Section - set the background image for the header in the line below -->
     <section class="py-5 bg-image-full" style="background-image: url('img/building.jpg');">
+      <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
+      <div style="height: 250px;"></div>
+    </section>
+
+    <!-- Content section -->
+    <section class="py-5">
+      <div class="container">
+        <h1>Solution</h1>
+        <p>
+          Reducing production waste by roughly 20% by switching to a Just-In-Time production where waste is cut by supplying parts only when needed. This also reduces inventory costs and space required for production.
+          <br/>Minimising energy waste in production by approximately 15% by optimizing the logistics and construction planning. Factory made parts can be used which have tighter seams than traditional homes, so are better at containing heat resulting in less energy consumption. Moreover as less waste will be generated, no energy will have to go to treating it.
+          <br/>Prolonging building lifecycle by 5% by relocating and changing the production method.
+        </p>
+      </div>
+    </section>
+
+     <!-- Image Section - set the background image for the header in the line below -->
+     <section class="py-5 bg-image-full" style="background-image: url('img/uk.png');">
       <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
       <div style="height: 250px;"></div>
     </section>
@@ -74,7 +95,7 @@
     </section>
 
      <!-- Image Section - set the background image for the header in the line below -->
-     <section class="py-5 bg-image-full" style="background-image: url('img/building.jpg');">
+     <section class="py-5 bg-image-full" style="background-image: url('img/architecture.jpg');">
       <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
       <div style="height: 250px;"></div>
     </section>
@@ -82,14 +103,24 @@
     <!-- Content section -->
     <section class="py-5">
       <div class="container">
-        <h1>Solution</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+        <h1>Benefits</h1>
+        <p class="lead">Better production and evergy efficiency, lower construction time.</p>
+        <p>
+          Using prefabricated building as a solution to reduce construction waste would offer several benefits.
+          <br/>It is estimated that, using off-site and modular building, would improve efficiency in construction up to 50% thanks to a more rigorous and controlled production line that would eliminate the issues related to on-site manufacturing. 
+          Furthermore, a rigorous offsite production line would lead to up to 30% improvement in energy efficiency of this type of buildings due to a more airtight manufacturing.
+            Construction time would also be reduced as the production on-site phase would be eliminated and performed in much more efficient off-site factories.
+           Finally the overall cost of construction would be reduced by 10 to 12%.
+        </p>
+
+        <div style="text-align: center">
+          <img src="img/benefits.png" style="max-width: 80%;"/>
+        </div>
       </div>
     </section>
 
      <!-- Image Section - set the background image for the header in the line below -->
-     <section class="py-5 bg-image-full" style="background-image: url('https://unsplash.it/1900/1080?image=1081');">
+     <section class="py-5 bg-image-full" style="background-image: url('img/gears.png');">
       <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
       <div style="height: 250px;"></div>
     </section>
@@ -97,29 +128,25 @@
     <!-- Content section -->
     <section class="py-5">
       <div class="container">
-        <h1>Advantages</h1>
+        <h1>Constraints</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
-      </div>
+
+        <div style="text-align: center">
+          <h3><b>Perception.</b></h3> 
+          <img src="img/1.png" style="max-width: 80%;"/>
+          <br/><br/>
+          <h3><b>Reality.</b></h3> 
+          <img src="img/2.png" style="max-width: 79%;"/>
+          <br/>
+          <br/>
+          <br/>
+        </div>  
+        </div>  
     </section>
 
      <!-- Image Section - set the background image for the header in the line below -->
-     <section class="py-5 bg-image-full" style="background-image: url('https://unsplash.it/1900/1080?image=1081');">
-      <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
-      <div style="height: 250px;"></div>
-    </section>
-
-    <!-- Content section -->
-    <section class="py-5">
-      <div class="container">
-        <h1>Design</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
-      </div>
-    </section>
-
-     <!-- Image Section - set the background image for the header in the line below -->
-     <section class="py-5 bg-image-full" style="background-image: url('https://unsplash.it/1900/1080?image=1081');">
+     <section class="py-5 bg-image-full" style="background-image: url('img/time.jpg');">
       <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
       <div style="height: 250px;"></div>
     </section>
@@ -131,10 +158,13 @@
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
       </div>
+      <div class="container" style="text-align: center">
+        <img src="img/timeline.png" style="max-width: 80%;"/>
+      </div>
     </section>
 
     <!-- Footer -->
-    <footer class="py-5" style="background-color: #25496f">
+    <footer class="py-5" style="background-color: #59ACB6">
       <div class="container">
         <p class="m-0 text-center text-white">
           Copyright &copy; UCL How to Change the World - 2018
