--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
       <div class="container">
         <h1>Solution</h1>
         <p>
-          Reducing production waste by roughly 20% by switching to a Just-In-Time production where waste is cut by supplying parts only when needed. This also reduces inventory costs and space required for production.
-          <br/>Minimising energy waste in production by approximately 15% by optimizing the logistics and construction planning. Factory made parts can be used which have tighter seams than traditional homes, so are better at containing heat resulting in less energy consumption. Moreover as less waste will be generated, no energy will have to go to treating it.
-          <br/>Prolonging building lifecycle by 5% by relocating and changing the production method.
+            The solution is prefabricated construction. For the traditional method, there are 6 steps in which the main structure of the house is built onsite. While for prefab, there are only 4, because the components are manufactured offsite, then will be sent to the site and installed. The skeletons of prefab houses are usually made of solid steel. This gives a variety of potential materials for the panels including concrete, wood, straw bale or even bamboo. The concrete panels, for example, are connected using a mechanism called “anchor” members and “ring” members, both are cylindrical steel plates that are embedded into the panels, they fit into each other and welded together.
         </p>
       </div>
     </section>
@@ -89,8 +87,12 @@
     <section class="py-5">
       <div class="container">
         <h1>Context</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+        <p class="lead">The state of prefabrication in the UK.</p>
+        <p>The UK construction industry underperforms in 4 areas: productivity, certainty in delivery, skills shortages, data transparency
+           Therefore, to improve in all of these aspects, we really believe PreFab buildings can transform the UK’s construction delivery performance.
+           A study by the UK Commision for Employment and Skills stated that offsite construction was 7% of the total construction sector in 2009
+          However, KPMG findings show that net financial project savings of 7% are possible with offsite construction due to the shortened construction length and thus shows the certified advantages with this approach.
+          However, with little encouragement and incentives to maximise PreFab in the UK, the industry is failing to make these bigger leaps and therefore we would like to further implement this.</p>
       </div>
     </section>
 
@@ -129,15 +131,15 @@
     <section class="py-5">
       <div class="container">
         <h1>Constraints</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+
+        <p>Like every project, this one carries risks and constraints. The biggest one being public perception. When people hear prefabricated they think the ugly soviet style construction of the post world war two years. But now people have all the time in the world to work with designers to get the home they like.</p>
 
         <div style="text-align: center">
           <h3><b>Perception.</b></h3> 
-          <img src="img/1.png" style="max-width: 80%;"/>
+          <img src="img/2.png" style="max-width: 79%;"/>
           <br/><br/>
           <h3><b>Reality.</b></h3> 
-          <img src="img/2.png" style="max-width: 79%;"/>
+          <img src="img/1.png" style="max-width: 80%;"/>
           <br/>
           <br/>
           <br/>
@@ -155,8 +157,14 @@
     <section class="py-5">
       <div class="container">
         <h1>Adoption Timeline</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+        <p class="lead">A breakdown time analysis of the adoption of our solution.</p>
+        <p>You may be wondering, what is the timeline of prefabrication? 
+
+            Well, first you must register the building. Following this, you need to get a factory - there are lots in the north and Scotland which can be rented or bought and fitted with the equipment. You also need to meet all regulations in regards to planning permits, material safety and worker safety.
+            
+            After all this, you can start to build the first home. From design, to construction in factory, to the final build on the land, this will only take 9 months - almost half the time current builds of a similar scale take.
+            
+            This is why prefabrication is the way forward!</p>
       </div>
       <div class="container" style="text-align: center">
         <img src="img/timeline.png" style="max-width: 80%;"/>
